src/raml1/test/data/TCK/raml-0.8/InvalidIncludeTags/test005/api.raml
#%RAML 0.8
title: test API

/resource:
  get: methods/getMethod.raml
